<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:title="@string/menu_home"
        android:icon="@drawable/icon_home_unselected"
        />

    <item
        android:id="@+id/chatFragment"
        android:title="@string/menu_chat"
        android:icon="@drawable/icon_chat_unselected"
        />
    <item
        android:id="@+id/mapFragment"
        android:title="@string/menu_map"
        android:icon="@drawable/icon_map_unselected"
        />
    <item
        android:id="@+id/communityFragment"
        android:title="@string/menu_community"
        android:icon="@drawable/icon_commu_unselected"
        />
    <item
        android:id="@+id/settingFragment"
        android:title="@string/menu_set"
        android:icon="@drawable/icon_setting_unselected"
        />

</menu>