<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".ui.commnunity.communitAdd.CommunityAddActivity">

    <EditText
        android:id="@+id/et_add_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/white"
        android:gravity="center"
        android:hint="@string/community_add_title"
        android:padding="10dp"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/chip_constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="65dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintTop_toBottomOf="@id/et_add_title"
        tools:layout_editor_absoluteX="-202dp">


        <View
            android:id="@+id/add_view_line_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:padding="8dp"
            app:layout_constraintBottom_toTopOf="@+id/chip_group"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingHorizontal="8dp"
            app:checkedChip="@id/chip_all"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:singleLine="false"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_all"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/community_all"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:chipBackgroundColor="@color/light_beige" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_share"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/community_share"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:chipBackgroundColor="@color/light_gray" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_walk"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/community_walk"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:chipBackgroundColor="@color/light_gray" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_love"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/community_love"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:chipBackgroundColor="@color/light_gray" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_exchange"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/community_exchange"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:chipBackgroundColor="@color/light_gray" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_add"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/community_add"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:chipBackgroundColor="@color/light_gray" />


        </com.google.android.material.chip.ChipGroup>

        <View
            android:id="@+id/add_view_line_2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chip_group"
            app:layout_scrollFlags="scroll|exitUntilCollapsed" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:hint="@string/community_add_content"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_view_line_2" />

        <Button
            android:id="@+id/btn_add_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="118dp"
            android:layout_marginBottom="33dp"
            android:text="@string/community_add_cancel"
            android:backgroundTint="@color/light_beige"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_add_enroll"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_add_enroll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="33dp"
            android:text="@string/community_add_enroll"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="@color/light_beige"
            app:layout_constraintStart_toEndOf="@+id/btn_add_cancel" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>